Add Stan model and interface function
* Add a Stan ddm model. See inst/stan/ddm.stan
* Using rstantools::use_rstan, created an interface function to this
  Stan model, see R/ddm_stan
* Add new vignette
* Update readme
* Bump to version 0.0.1

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,14 @@
 
 export("%>%")
 export(dchoice)
+export(ddm_stan)
 export(random_walk)
 export(simulate_ddm)
 export(time_choice_density)
+import(Rcpp)
+import(methods)
 importFrom(Rcpp,sourceCpp)
 importFrom(magrittr,"%>%")
+importFrom(rstan,sampling)
 importFrom(tibble,tibble)
 useDynLib(norbertr, .registration = TRUE)
