--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: norbertr
 Title: Some Tools for Analysing the Drift Diffusion Model
-Version: 0.0.0.9000
+Version: 0.0.1
 Authors@R: 
     person("Mark", "Andrews", , "mark.andrews@ntu.ac.uk", role = c("aut", "cre"))
 Description: Some tools for simulating and analysing the probability distributions of
@@ -15,11 +15,25 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
-    Rcpp,
-    purrr (>= 0.3.4),
+    formula.tools (>= 1.7.1),
     ggplot2 (>= 3.3.5),
     magrittr,
+    methods,
+    purrr (>= 0.3.4),
+    Rcpp (>= 0.12.0),
+    RcppParallel (>= 5.0.1),
+    rstan (>= 2.18.1),
+    rstantools (>= 2.1.1),
     tibble
 LinkingTo: 
-    Rcpp
+    BH (>= 1.66.0),
+    Rcpp (>= 0.12.0),
+    RcppEigen (>= 0.3.3.3.0),
+    RcppParallel (>= 5.0.1),
+    rstan (>= 2.18.1),
+    StanHeaders (>= 2.18.0)
 VignetteBuilder: knitr
+Biarch: true
+Depends: 
+    R (>= 3.4.0)
+SystemRequirements: GNU make
