--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,5 +3,6 @@ pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   demo: demo.html
-last_built: 2021-12-08T23:40Z
+  stan_demo: stan_demo.html
+last_built: 2021-12-10T14:28Z
 
